Fixed markers not showing on map

--- a/src/main/webapp/app/entities/community/community.component.scss
+++ b/src/main/webapp/app/entities/community/community.component.scss
@@ -32,6 +32,7 @@ h3 {
 .messages {
   height: 400px;
   overflow-y: auto;
+  width: 500px;
 }
 .chatroom {
   display: flex;
